--- a/app/src/main/res/layout/registration_fragment.xml
+++ b/app/src/main/res/layout/registration_fragment.xml
@@ -12,9 +12,9 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:maxLength="15"
 
             android:id="@+id/et_Login_RF"
-
             android:hint="@string/s_loginHint_RF"/>
     </android.support.design.widget.TextInputLayout>
 
@@ -24,9 +24,9 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:maxLength="15"
 
             android:id="@+id/et_Password_RF"
-
             android:hint="@string/s_passwordHint_RF"/>
     </android.support.design.widget.TextInputLayout>
 
@@ -36,9 +36,9 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:maxLength="15"
 
             android:id="@+id/et_FirstName_RF"
-
             android:hint="@string/s_firstNameHint_RF"/>
     </android.support.design.widget.TextInputLayout>
 
@@ -48,9 +48,9 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:maxLength="15"
 
             android:id="@+id/et_LastName_RF"
-
             android:hint="@string/s_lastNameHint_RF"/>
     </android.support.design.widget.TextInputLayout>
 
