--- a/app/src/main/res/layout/sign_in_fragment.xml
+++ b/app/src/main/res/layout/sign_in_fragment.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="40dp">
+    android:layout_margin="@dimen/d_size_40dp">
 
     <TextView
         android:layout_width="match_parent"
@@ -13,17 +13,15 @@
         android:id="@+id/tv_Greeting_SF"
 
         android:text="@string/s_greeting_SF"
-        android:textSize="15sp"
+        android:textSize="@dimen/d_textSize_15sp"
         android:gravity="center"
 
-        android:layout_marginBottom="50dp"/>
+        android:layout_marginBottom="@dimen/d_size_50dp"/>
 
     <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        style="@style/stl_textInputLayout">
         <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            style="@style/stl_editText"
 
             android:id="@+id/et_Login_SF"
 
@@ -31,11 +29,9 @@
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        style="@style/stl_textInputLayout">
         <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            style="@style/stl_editText"
 
             android:id="@+id/et_Password_FF"
 
@@ -51,12 +47,12 @@
         android:clickable="true"
 
         android:text="@string/s_registration_SF"
-        android:textSize="23sp"
+        android:textSize="@dimen/d_textSize_23sp"
         android:textStyle="italic"
         android:textColor="@color/colorAccent"
         android:gravity="center"
 
-        android:layout_marginTop="50dp"/>
+        android:layout_marginTop="@dimen/d_size_50dp"/>
 
     <Button
         android:layout_width="match_parent"
@@ -65,10 +61,9 @@
         android:id="@+id/btn_SignIn_SF"
 
         android:text="@string/s_signIn_SF"
-        android:textSize="17sp"
+        android:textSize="@dimen/d_textSize_17sp"
         android:gravity="center"
 
-        android:layout_marginTop="50dp"/>
-
+        android:layout_marginTop="@dimen/d_size_50dp"/>
 
 </LinearLayout>
